smell 제거 완료